<?xml version="1.0"?>
<package format="3">
  <name>z_arm_2442c0_model</name>
  <version>1.0.0</version>
  <description>URDF Description package for Z-Arm 2442C0. This package contains configuration data, 3D models, and launch files.</description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <!-- 构建工具 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 运行时依赖 -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ament_python</exec_depend>
  <exec_depend>rclpy</exec_depend>


  <!-- 如果你有 Python launch 文件 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>

</package>
